--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,9 @@
   <groupId>clinic.programming</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+  <properties>
+    <maven.compiler.source>10</maven.compiler.source>
+    <maven.compiler.target>10</maven.compiler.target>
+    <maven.compiler.release>10</maven.compiler.release>
+  </properties>
 </project>
